# smart-manifest-gen

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
smart_manifest_gen/: __init__.py  core.py
tests/: test_smart_manifest_gen.py
